[project]
name = "comfyui-magickwand"
description = ""
version = "1.0.0"
license = "LICENSE"
dependencies = ["Wand"]

[project.urls]
Repository = "https://github.com/Fannovel16/ComfyUI-MagickWand"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-MagickWand"
Icon = ""
Models = [{location = "/checkpoints/model.safetensor", model_url = "https://example.com/model.zip"}]
